# SysBadge

./: .envrc  .gitignore  .gitlab-ci.yml  255.js  459.js  639.js  879.js  963.js  CNAME  Cargo.toml  Makefile.toml  build.rs  cbindgen.toml  flake.nix  index.js  justfile  memory.x  sysbadge.elf  sysbadge.uf2  sysdf.magic
.cargo/: config.toml
.github/workflows/: main.yml  merge_queue.yml  nix.yml  pr-preview.yml  pr.yml  web.yml
bindings/apple/: Makefile  Package.swift
bindings/apple/Sources/SysBadgeFFI/: Error.swift  SysBadgeFFI.swift  System.swift  SystemFFI.swift  SystemFile.swift  SystemFileWriter.swift
bindings/apple/Sources/sysbadge_ffi/: module.modulemap
bindings/apple/Tests/SysBadgeFFITests/: SystemFFITest.swift  SystemFileTest.swift  SystemFileWriterTest.swift  SystemTest.swift
cli/: Cargo.toml
cli/src/: dl.rs  get.rs  main.rs  system.rs
fw/: Cargo.toml  memory.x
fw-rp2040/: Cargo.toml  memory.x
fw-rp2040/src/: main.rs
fw-rp2040/src/usb/: mod.rs
fw/src/: main.rs
fw/src/ble/: device_info.rs  mod.rs  sysbadge.rs
fw/src/usb/: class.rs  mod.rs  sysbadge.rs  web.rs
gtk/: Cargo.toml
gtk/src/: main.rs  usb.rs
gtk/src/components/: header.rs  mod.rs
gui/: Cargo.toml
gui/src/: main.rs  member_list.rs
pr-preview/pr-1/: 173.js  949.js  index.js  sysbadge.uf2
pr-preview/pr-10/: 285.js  index.js  sysbadge.elf  sysbadge.uf2
pr-preview/pr-11/: 162.js  559.js  868.js  index.js  sysbadge.elf
pr-preview/pr-12/: 528.js  index.js  sysbadge.uf2
pr-preview/pr-13/: 180.js  index.js  sysbadge.elf
pr-preview/pr-14/: 353.js  index.js  sysbadge-fw
pr-preview/pr-17/: 166.js  index.js  sysbadge-fw
pr-preview/pr-2/: 266.js  index.js  sysbadge.elf  sysbadge.uf2
pr-preview/pr-3/: 861.js  index.js  style.css
pr-preview/pr-4/: sysbadge.elf
pr-preview/pr-5/: index.html  index.js  sysbadge.elf
pr-preview/pr-7/: 583.js  646.js  677.js  index.js  sysbadge.elf  sysbadge.uf2
pr-preview/pr-8/: sysbadge.uf2
pr-preview/pr-9/: index.js
simulator/: Cargo.toml
simulator/src/: defmt_stderr.rs  main.rs
src/: badge.rs  binding.rs  lib.rs  main.rs  system.rs  usb.rs
src/system/: alloc.rs  bindings.rs  file.rs  mod.rs  owned.rs  system.capnp  uf2.rs
src/system/downloaders/: bindings.rs  mod.rs  pk.rs  pronouns.rs
src/system/file/: binding.rs  mod.rs
tests/: exmpl.sysdf  file_c_test.rs
usb/: Cargo.toml  build.rs  cbindgen.toml
usb/src/: c.rs  err.rs  lib.rs  main.rs  raw.rs
web/: Cargo.toml  package.json  tsconfig.json  webpack.config.js
web/js/: index.js  index.ts
web/src/: lib.rs  update.rs
web/src/badge/: badge.html  mod.rs
web/src/update/: mod.rs  updater.html
web/static/: doc.html  index.html
