[package]
name = "sysbadge"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ ]
simulator = [ ]
invert = [ ]

[dependencies]
defmt = { version = "0.3", features = ["alloc"] }

nb = "1.1"
fugit = "0.3"

# Display
embedded-graphics = "0.8"
#uc8151 = { version = "0.2", features = [ "graphics" ] }

[workspace]
members = [
    "./fw",
    "./simulator"
]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
