[package]
name = "sysbadge"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "uf2" ]
simulator = [ ]
invert = [ ]
downloaders = [ "alloc" ]
downloader = [ "downloader-pk" ]
downloader-pk = [ "downloaders", "dep:pkrs", "dep:reqwest" ]
wasm = [ "dep:wasm-bindgen" ]
defmt = [ "dep:defmt" ]
uf2 = [ ]
alloc = [ "defmt?/alloc", "capnp/alloc" ]
clap = [ "dep:clap" ]

[dependencies]
defmt = { version = "0.3", features = [ ], optional = true }

nb = "1.1"
fugit = "0.3"
crc16 = "0.4.0"

# Display
embedded-graphics = "0.8"
uc8151 = { version = "0.2" }
profont = "0.7.0"

# updater
pkrs = { version = "0.3", optional = true }
reqwest = { version = "0.11", optional = true }
clap = { version = "4", optional = true }

wasm-bindgen = { version = "=0.2.87", optional = true }

capnp = { version = "0.18", default-features = false, features= [ ] }
[build-dependencies]
capnpc = "0.18"

[workspace]
members = [
    "./fw",
    "./simulator",
    "./web",
    "./usb",
    "./cli"
]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
embedded-graphics-web-simulator = { git = "https://github.com/georgik/embedded-graphics-web-simulator.git", rev = "6faa2cc69fcbb2b9b17ae1f765107a499dd4f8b8" }
