[package]
name = "sysbadge-fw"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7" }

sysbadge = { path = "..", default-features = false, features = [ "defmt" ] }
uc8151 = { version = "0.2", features = [ "graphics" ] }
embedded-graphics-core = "0.4" # TODO: remove

defmt = { version = "0.3", features = [ ], default-features = false }
defmt-rtt = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = { version = "1.2.0", features = [ "nightly" ] }
heapless = "0.7.1"

embassy-executor = { version = "0.3.0", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers" ]}
embassy-time = { version = "0.1.0", features = [ "nightly", "defmt", "defmt-timestamp-uptime" ]}
embassy-sync = { version = "0.2.0" }
embassy-futures = "0.1.0"
embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
embassy-usb = { version = "0.1", features = [ "defmt" ]}
embedded-storage-async = "0.4.0"
nrf-softdevice = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "s113", "ble-peripheral", "ble-gatt-server", "ble-sec", "critical-section-impl" ]}
nrf-softdevice-s113 = { version = "0.1.0" }
log = "0.4.20"