[package]
name = "sysbadge-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [ "time" ]}

anyhow = "1"
sysbadge-usb = { path = "../usb" }

relm4 = "0.6.0"
relm4-components = "0.6.0"
tracker = "0.2"

log = "0.4"
pretty_env_logger = "0.5"
