[package]
name = "sysbadge-simulator"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysbadge = { path = "..", features = [ "simulator" ] }

embedded-graphics-simulator = { version = "0.5" }
embedded-graphics = "0.8"
defmt = { version = "0.3", features = ["alloc"] }
