[package]
name = "sysbadge-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ ]
tui = [ "crossterm", "ratatui" ]


[dependencies]
rusb = "0.9.2"
pretty_env_logger = "0.5"

sysbadge = { path = "..", features = [ "std", "tracing" ] }

crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.22", optional = true, features = [ "all-widgets" ] }

tracing = { version = "0.1" }

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = [ "tui" ]
