[package]
name = "sysbadge-web"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = [ "update" ]
update = [ "reqwest", "pkrs", "wasm-bindgen-futures", "wasm-bindgen/serde-serialize" ]

[dependencies]
sysbadge = { path = "..", features = [ "simulator", "wasm" ] }

wasm-bindgen = "=0.2.84"
wee_alloc = "0.4.5"

embedded-graphics-web-simulator = "0.4.0"
embedded-graphics = "0.8"

# Fetching data
reqwest = { version = "0.11", optional = true }
pkrs = { version = "0.3.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window"
]

[target.'cfg(debug_assertions)'.dependencies]
console_error_panic_hook = "0.1.7"
