[package]
name = "sysbadge-web"
version = "0.1.0"
edition = "2021"
license = "gpl3"
authors = [ "Finn Behrens <me@kloenk.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = [ "badge", "update" ]
update = [ "reqwest", "pkrs", "wasm-bindgen-futures", "sysbadge/updater", "sysbadge/uf2", "wasm-bindgen/serde-serialize", "web-sys/HtmlInputElement", "web-sys/HtmlButtonElement", "web-sys/Blob", "web-sys/Url", "web-sys/BlobPropertyBag" ]
badge = [ "embedded-graphics", "embedded-graphics-web-simulator", "web-sys/HtmlCanvasElement", "web-sys/CanvasRenderingContext2d" ]

[dependencies]
sysbadge = { path = "..", features = [ "simulator", "wasm", "alloc" ] }

wasm-bindgen = "=0.2.87"
wee_alloc = "0.4.5"

# Badge
embedded-graphics-web-simulator = { version = "0.4.0", optional = true }
embedded-graphics = { version = "0.8", optional = true }

# Update
reqwest = { version = "0.11", optional = true }
pkrs = { version = "0.3.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Window"
]

[target.'cfg(debug_assertions)'.dependencies]
console_error_panic_hook = "0.1.7"
